responsive for header

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,7 +31,7 @@
           <img src="img/The makeup show.svg" alt="">
         </div>
 
-        <div class="shitty-text">
+        <div class="potato-text">
           <div class="line flex">
             <p>the makeup show</p>
             <p>the makeup show</p>
@@ -52,6 +52,10 @@
             <p>the makeup show</p>
             <p>the makeup show</p>
           </div>
+        </div>
+
+        <div class="potato-text-mobile">
+          <img src="img/potato-text.svg" alt="">
         </div>
 
       </div>
