added phones and we did

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -65,9 +65,97 @@
       </div>
     </section>
 
-    <section id="social_networks">
-      <div class="social_networks-container flex">
-        <h2>Social networks</h2>
+    <section id="subteaser" class="subteaser flex a-i-center f-d-column">
+      <div class="container">
+        <h2>we did</h2>
+        <div class="services flex j-c-s-between">
+          <div class="service" id="s-slide1">
+            <h3>Social media</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+          </div>
+
+          <div class="service" id="s-slide2">
+            <h3>Video &</h3>
+            <h3>Photoshoot</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+          </div>
+
+        </div>
+
+        <div class="slider-buttons" id="teaser-slider">
+          <div class="s-button selected"></div>
+          <div class="s-button"></div>
+        </div>
+
+        <div class="tags flex" id="tags">
+          <div class="tag" id="t-slide1">
+            <h4 id="color1"><span id="color1">3</span> days</h4>
+            <p>3 days of event coverage</p>
+          </div>
+          <div class="tag">
+            <h4 id="color2"><span id="color2">100</span> +</h4>
+            <p>100+ interviews</p>
+          </div>
+          <div class="tag">
+            <h4 id="color3"><span id="color3">40</span> h</h4>
+            <p>Over 40 hours of footage</p>
+          </div>
+          <div class="tag">
+            <h4 id="color4"><span id="color4">6</span> videos</h4>
+            <p>6 timelapse videos</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="phones">
+      <div class="phones flex">
+        <div class="wrap">
+          <img src="img/iphones.png" alt="">
+        </div>
+        <div class="text-wrap">
+          <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</h4>
+        </div>
+      </div>
+    </section>
+
+    <section id="social1" class="social">
+      <div class="title flex">
+        <h2>Social<br>networks</h2>
+      </div>
+      <h2 class="spookytext">Social<br>networks</h2>
+      <div class="container flex">
+        <div class="text">
+          <h3>Social media</h3>
+          <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</h4>
+        </div>
+        <div class="image">
+          <img src="img/phone1.png" alt="">
+        </div>
+      </div>
+    </section>
+
+    <section id="social2" class="social">
+      <div class="container flex">
+        <div class="image">
+          <img src="img/phone2.png" alt="">
+        </div>
+        <div class="text">
+          <h3>Social media</h3>
+          <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</h4>
+        </div>
+      </div>
+    </section>
+
+    <section id="social3" class="social">
+      <div class="container flex">
+        <div class="text">
+          <h3>Social media</h3>
+          <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</h4>
+        </div>
+        <div class="image">
+          <img src="img/phone3.png" alt="">
+        </div>
       </div>
     </section>
 
