added some segments

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -159,6 +159,134 @@
       </div>
     </section>
 
+    <section id="photos" class="photos flex f-d-column a-i-center">
+      <div class="container">
+        <h2>photos</h2>
+        <div class="photo-slider">
+          <ul>
+            <li class="photo-item flex wrap j-c-s-between">
+              <div class="photo-wrap w60">
+                <img src="img/1.png" alt="">
+              </div>
+              <div class="photo-wrap w39">
+                <img src="img/2.png" alt="">
+              </div>
+              <div class="photo-wrap w39">
+                <img src="img/3.png" alt="">
+              </div>
+              <div class="photo-wrap w60">
+                <img src="img/4.png" alt="">
+              </div>
+              <div class="photo-wrap w100">
+                <img src="img/5.png" alt="">
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="slider-buttons" id="photos-slider">
+        <div class="s-button selected"></div>
+        <div class="s-button"></div>
+      </div>
+    </section>
+
+    <section id="behind" class="behind flex f-d-column a-i-center">
+      <div class="title">
+        <h2>behind the<br>scenes</h2>
+      </div>
+      <div class="container flex j-c-s-between a-i-center">
+        <div class="prev">
+          <div class="i-wrap">
+            <img src="img/l1.png" alt="">
+          </div>
+          <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</h4>
+        </div>
+        <div class="current">
+          <div class="i-wrap">
+            <img src="img/l2.png" alt="">
+          </div>
+          <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</h4>
+        </div>
+        <div class="next">
+          <div class="i-wrap">
+            <img src="img/l3.png" alt="">
+          </div>
+          <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</h4>
+        </div>
+      </div>
+      <div class="slider-buttons" id="behind-slider">
+        <div class="s-button selected"></div>
+        <div class="s-button"></div>
+      </div>
+    </section>
+
+    <section id="video" class="video flex f-d-column a-i-center">
+      <div class="title">
+        <h2>video<br>production</h2>
+      </div>
+      <div class="container">
+        <div class="img-wrap">
+          <img src="img/artefacted.png" alt="">
+        </div>
+        <div class="text-wrap">
+          <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</h4>
+        </div>
+        <div class="videos-array flex j-c-s-between">
+          <div class="video-duplet">
+            <div class="video-item">
+              <div class="video-wrap">
+                <img src="img/vv.png" alt="">
+              </div>
+              <p>Dr. Link Intorduction</p>
+            </div>
+            <div class="video-item">
+              <div class="video-wrap">
+                <img src="img/vv.png" alt="">
+              </div>
+              <p>Dr. Link Intorduction</p>
+            </div>
+          </div>
+
+          <div class="video-duplet">
+            <div class="video-item">
+              <div class="video-wrap">
+                <img src="img/vv.png" alt="">
+              </div>
+              <p>Dr. Link Intorduction</p>
+            </div>
+            <div class="video-item">
+              <div class="video-wrap">
+                <img src="img/vv.png" alt="">
+              </div>
+              <p>Dr. Link Intorduction</p>
+            </div>
+          </div>
+
+          <div class="video-duplet">
+            <div class="video-item">
+              <div class="video-wrap">
+                <img src="img/vv.png" alt="">
+              </div>
+              <p>Dr. Link Intorduction</p>
+            </div>
+            <div class="video-item">
+              <div class="video-wrap">
+                <img src="img/vv.png" alt="">
+              </div>
+              <p>Dr. Link Intorduction</p>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="slider-buttons" id="videos-slider">
+          <div class="s-button selected"></div>
+          <div class="s-button"></div>
+        </div>
+
+      </div>
+    </section>
+
   </body>
 
   <script src="js/bundle.js"></script>
