added videos from wistia

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -159,8 +159,7 @@
 
       </div>
       <div class="video-container">
-        <!-- <video src="img/v.jpg"></video> -->
-        <img src="img/v.jpg"></img>
+        <div class="wistia_embed wistia_async_pukozq6xf0"></div>
       </div>
     </section>
 
@@ -390,28 +389,14 @@
           <div class="video-duplet">
             <div class="video-item">
               <div class="video-wrap">
-                <img src="img/vv.png" alt="">
+                <!-- <img src="img/vv.png" alt=""> -->
+                <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
               </div>
               <p>Dr. Link Intorduction</p>
             </div>
             <div class="video-item">
               <div class="video-wrap">
-                <img src="img/vv.png" alt="">
-              </div>
-              <p>Dr. Link Intorduction</p>
-            </div>
-          </div>
-
-          <div class="video-duplet">
-            <div class="video-item">
-              <div class="video-wrap">
-                <img src="img/vv.png" alt="">
-              </div>
-              <p>Dr. Link Intorduction</p>
-            </div>
-            <div class="video-item">
-              <div class="video-wrap">
-                <img src="img/vv.png" alt="">
+                <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
               </div>
               <p>Dr. Link Intorduction</p>
             </div>
@@ -420,13 +405,28 @@
           <div class="video-duplet">
             <div class="video-item">
               <div class="video-wrap">
-                <img src="img/vv.png" alt="">
+                <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
               </div>
               <p>Dr. Link Intorduction</p>
             </div>
             <div class="video-item">
               <div class="video-wrap">
-                <img src="img/vv.png" alt="">
+                <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
+              </div>
+              <p>Dr. Link Intorduction</p>
+            </div>
+          </div>
+
+          <div class="video-duplet">
+            <div class="video-item">
+              <div class="video-wrap">
+                <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
+              </div>
+              <p>Dr. Link Intorduction</p>
+            </div>
+            <div class="video-item">
+              <div class="video-wrap">
+                <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
               </div>
               <p>Dr. Link Intorduction</p>
             </div>
@@ -438,13 +438,13 @@
           <div class="video-duplet" id="v1">
             <div class="video-item">
               <div class="video-wrap">
-                <img src="img/vv.png" alt="">
+                <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
               </div>
               <p>Dr. Link Intorduction</p>
             </div>
             <div class="video-item">
               <div class="video-wrap">
-                <img src="img/vv.png" alt="">
+                <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
               </div>
               <p>Dr. Link Intorduction</p>
             </div>
@@ -453,13 +453,13 @@
           <div class="video-duplet" id="v2">
             <div class="video-item">
               <div class="video-wrap">
-                <img src="img/vv.png" alt="">
+                <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
               </div>
               <p>Dr. Link Intorduction</p>
             </div>
             <div class="video-item">
               <div class="video-wrap">
-                <img src="img/vv.png" alt="">
+                <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
               </div>
               <p>Dr. Link Intorduction</p>
             </div>
@@ -468,13 +468,13 @@
           <div class="video-duplet" id="v3">
             <div class="video-item">
               <div class="video-wrap">
-                <img src="img/vv.png" alt="">
+                <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
               </div>
               <p>Dr. Link Intorduction</p>
             </div>
             <div class="video-item">
               <div class="video-wrap">
-                <img src="img/vv.png" alt="">
+                <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
               </div>
               <p>Dr. Link Intorduction</p>
             </div>
@@ -543,4 +543,7 @@
   </body>
 
   <script src="js/bundle.js"></script>
+  <script src="//fast.wistia.com/embed/medias/pukozq6xf0.jsonp" async></script>
+  <script src="//fast.wistia.com/assets/external/E-v1.js" async></script>
+
 </html>
