--- a/src/html/index.html
+++ b/src/html/index.html
@@ -344,21 +344,9 @@
               </div>
               <p>Dr. Link Intorduction</p>
             </div>
-            <div class="video-item">
-              <div class="video-wrap">
-                <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
-              </div>
-              <p>Dr. Link Intorduction</p>
-            </div>
           </div>
 
           <div class="video-duplet" id="v2">
-            <div class="video-item">
-              <div class="video-wrap">
-                <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
-              </div>
-              <p>Dr. Link Intorduction</p>
-            </div>
             <div class="video-item">
               <div class="video-wrap">
                 <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
@@ -374,6 +362,9 @@
               </div>
               <p>Dr. Link Intorduction</p>
             </div>
+          </div>
+
+          <div class="video-duplet" id="v4">
             <div class="video-item">
               <div class="video-wrap">
                 <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
@@ -382,12 +373,32 @@
             </div>
           </div>
 
+          <div class="video-duplet" id="v5">
+            <div class="video-item">
+              <div class="video-wrap">
+                <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
+              </div>
+              <p>Dr. Link Intorduction</p>
+            </div>
+          </div>
+
+          <div class="video-duplet" id="v6">
+            <div class="video-item">
+              <div class="video-wrap">
+                <div class="wistia_embed wistia_async_pukozq6xf0 popover=true"></div>
+              </div>
+              <p>Dr. Link Intorduction</p>
+            </div>
+          </div>
         </div>
 
         <div class="slider-buttons" id="videos-dots">
           <div class="s-button v1 active"></div>
           <div class="s-button v2"></div>
           <div class="s-button v3"></div>
+          <div class="s-button v4"></div>
+          <div class="s-button v5"></div>
+          <div class="s-button v6"></div>
         </div>
 
       </div>
